Modified font size for better visibility -Also fixed bug with score. The number of questions asked jumped from 0 to 2 when proceeding from question 1 to question 2

--- a/style.css
+++ b/style.css
@@ -55,6 +55,9 @@ body {
     border: yellow solid 0.3rem;
     border-radius: 1rem;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .trivia-button {
@@ -63,7 +66,7 @@ body {
 }
 
 .trivia-button button {
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 700;
     padding: 0.3em;
     color: red;
@@ -90,6 +93,11 @@ body {
 }
 
 /* Answer choice inputs */
+.answer-choice-container {
+    display: grid;
+    row-gap: 1rem;
+}
+
 .answer-choice {
     display: grid;
     grid-template-columns: min-content auto;
@@ -109,14 +117,14 @@ body {
 
 .answer-choice-control {
     display: block;
-    width: 1rem;
-    height: 1rem;
+    width: 1.2rem;
+    height: 1.2rem;
     border-radius: 50%;
-    border: 0.1em solid yellow;
+    border: 0.15em solid yellow;
 }
 
 .answer-choice-input input:checked + .answer-choice-control {
-    background: radial-gradient(yellow 40%, black 41%)
+    background-color: yellow;
 }
 
 /* Control panel */
@@ -267,7 +275,7 @@ body {
     }
 
     .trivia-container {
-        height: 90rem;
+        height: 99rem;
         grid-template-columns: 1fr;
         grid-template-rows: 8fr 2fr;
         border: black solid 0.5rem;
@@ -278,7 +286,7 @@ body {
     }
 
     .trivia-screen {
-        font-size: 3.5rem;
+        font-size: 4rem;
     }
 
     .control-panel {
@@ -288,5 +296,19 @@ body {
 
     .lightbulbs-container {
         flex-direction: row;
+    }
+
+    .answer-choice {
+        grid-gap: 1.5rem;
+    }
+
+    .answer-choice-control {
+        border: 0.1em solid yellow;
+    }
+
+    .trivia-button button {
+        font-size: 4rem;
+        width: 30%;
+        border-radius: 0.5em;
     }
 }
